--- a/index.html
+++ b/index.html
@@ -323,13 +323,18 @@
     <section id="sponsors">
         <div class="part left">
           <div id="group1">
-            <div class="sponsor-logo1"></div>
-            <div class="sponsor-logo2"></div>
+            <div class="sponsor logo1">
+              <img class="logo" src="img/designit.svg" alt="">
+            </div>
+            <div class="sponsor logo2">
+              <img class="logo" src="img/arizona_state_university.svg" alt="">
+            </div>
           </div>
           <div id="group2">
-            <div class="s2onsor-logo 3"></div>
-            <div class="sponsor-logo 4"></div>
+            <div class="sponsor logo3"></div>
+            <div class="sponsor logo4"></div>
           </div>
+          
         </div>
         <div class="part center"></div>
         <div class="part right"></div>
