--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
           </div>
         </div>
     </section>
-    <section>
-      <div>
-        <h1>Porta </h1>
+    <section id="under-sponsers">
+      <div class="dropBox-business">
+          <h1 id="under-sponsers-text">Porta Dropbox Business <br> nella tua azienda </h1>
       </div>
     </section>
     
