--- a/index.html
+++ b/index.html
@@ -369,8 +369,50 @@
     <section id="under-sponsers">
       <div class="dropBox-business">
           <h1 id="under-sponsers-text">Porta Dropbox Business <br> nella tua azienda </h1>
+          <a href ><button id="prova-gratuita" >Inizia la tua prova gratuita</button></a>
       </div>
     </section>
+    <section id="questions">
+      <h1>Domande frequenti</h1>
+      <div class="all-questions">
+        <hr>
+        <div class="row-question">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-angle-up"></i>
+          <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+        </div>
+        <p class="row-answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus itaque sequi veritatis nostrum reiciendis ipsa esse quo magnam nulla officiis necessitatibus, laboriosam quasi, ad minus quod praesentium ut ab corporis.</p>
+        <hr>
+
+        <div class="row-question">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-angle-up"></i>
+          <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+        </div>
+        <p class="row-answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus itaque sequi veritatis nostrum reiciendis ipsa esse quo magnam nulla officiis necessitatibus, laboriosam quasi, ad minus quod praesentium ut ab corporis.</p>
+        <hr>
+
+        <div class="row-question">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-angle-up"></i>
+          <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+        </div>
+        <p class="row-answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus itaque sequi veritatis nostrum reiciendis ipsa esse quo magnam nulla officiis necessitatibus, laboriosam quasi, ad minus quod praesentium ut ab corporis.</p>
+        <hr>
+
+        <div class="row-question">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-angle-up"></i>
+          <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+        </div>
+        <p class="row-answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus itaque sequi veritatis nostrum reiciendis ipsa esse quo magnam nulla officiis necessitatibus, laboriosam quasi, ad minus quod praesentium ut ab corporis.</p>
+        <hr>
+      </div>
+    </section>
+
+    <footer>
+      
+    </footer>
     
 </body>
 </html>
