--- a/index.html
+++ b/index.html
@@ -38,20 +38,22 @@
 
     </header>
     <section class="top-section">
-        <div class="container-jumbo">
+      <div class="container-jumbo">
         <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-            <span class="paragraph-top">
+            <div class="paragraph-top">
                 <p>
-                    Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                  Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                 </p>
-                    <a href ><button id="button-inizia" class="prova-button">Inizia la tua prova gratuita</button></a>
-                    <p>Annulla in qualsiasi momento</p> 
-                    <div id="arrow-downlaod">
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-            </span>
-            <div class="img-jumbo"></div>
-        </div>
+                <a href ><button id="button-inizia" class="prova-button">Inizia la tua prova gratuita</button></a>
+                <p>Annulla in qualsiasi momento</p> 
+                <div id="arrow-downlaod">
+                  <i class="fa-solid fa-arrow-down"></i>
+                </div>
+            </div>
+            <div class="img-jumbo">
+              <img  src="img/jumbo.png" alt="">                
+            </div>
+      </div>
     </section>
     <main>
 
@@ -80,15 +82,15 @@
                     <div class="price-details">/mese</div>
                     <div class="user-benefits">
                       <i class="fa-regular fa-user"></i>
-                      <span>1 utente</span>  
+                      <div>1 utente</div>  
                     </div>
                     <div class="user-benefits">
-                        <i class="fa-solid fa-folder"></i>
-                        <span>3 TB di spazio di archiviazione sicuro</span>
+                      <i class="fa-solid fa-folder"></i>
+                      <div>3 TB di spazio di archiviazione sicuro</div>
                     </div>
                     <div class="user-benefits">
                       <i class="fa-solid fa-pen"></i>
-                      <span class="text">Funzioni di produttività premium e condivisione file emplice e sicura</span>
+                      <div class="text">Funzioni di produttività premium e condivisione file emplice e sicura</div>
                     </div>
                     <a href ><button id="button-inizia" class="prova-button">Prova gratis per 30 giorni</button></a>
                     <div class="aquissta-line">
@@ -139,15 +141,15 @@
                   <div class="price-details">utente/mese, a partire da 3 utenti</div>
                   <div class="user-benefits">
                     <i class="fa-solid fa-user-plus"></i>
-                    <span>1 utente</span>  
+                    <div>1 utente</div>  
                   </div>
                   <div class="user-benefits">
                       <i class="fa-solid fa-folder"></i>
-                      <span>3 TB di spazio di archiviazione sicuro</span>
+                      <div>3 TB di spazio di archiviazione sicuro</div>
                   </div>
                   <div class="user-benefits">
                       <i class="fa-regular fa-face-smile"></i>
-                    <span class="text">Funzioni di produttività premium e condivisione file emplice e sicura</span>
+                      <div class="text">Funzioni di produttività premium e condivisione file emplice e sicura</div>
                   </div>
                   <a href ><button id="button-inizia" class="prova-button">Prova gratis per 30 giorni</button></a>
                   <div class="aquissta-line">
@@ -198,15 +200,15 @@
                   <div class="price-details">/utente/messe, a partire da 3 utenti</div>
                   <div class="user-benefits">
                     <i class="fa-solid fa-user-plus"></i>
-                    <span>1 utente</span>  
+                    <div>1 utente</div>  
                   </div>
                   <div class="user-benefits">
                       <i class="fa-regular fa-face-smile"></i>
-                      <span>3 TB di spazio di archiviazione sicuro</span>
+                      <div>3 TB di spazio di archiviazione sicuro</div>
                   </div>
                   <div class="user-benefits">
                     <i class="fa-solid fa-pen"></i>
-                    <span class="text">Funzioni di produttività premium e condivisione file emplice e sicura</span>
+                    <div class="text">Funzioni di produttività premium e condivisione file emplice e sicura</div>
                   </div>
                   <a href ><button id="button-inizia" class="prova-button">Prova gratis per 30 giorni</button></a>
                   <div class="aquissta-line">
