--- a/index.html
+++ b/index.html
@@ -16,9 +16,34 @@
                 
                 <nav id="nav-left">
                     <ul>
-                        <li><a href="#">Perchè Dropbox</a></li>
-                        <li><a href="#">Funzioni</a></li>
-                        <li><a href="#">Piani e prezzi</a></li>
+                        <li><a href="#">Perchè Dropbox
+                          <span class="tooltiptext">
+                            <ul>
+                              <li> Informazioni</li>
+                            </ul>
+                          </span>
+                        </a>
+                        </li>
+
+                        <li><a href="#">Funzioni
+                          <span class="tooltiptext">
+                            <ul>
+                              <li>Nuove funzioni</li>
+                              <li>Aggiornamenti</li>
+                              <li></li>
+                            </ul>
+                          </span>
+                        </a></li>
+
+                        <li><a href="#">Piani e prezzi
+                          <span class="tooltiptext">
+                            <ul>
+                              <li>un mese</li>
+                              <li>un'anno</li>
+                            </ul>
+                          </span>
+                        </a></li>
+
                     </ul>
                 </nav>
             </div>
@@ -27,7 +52,17 @@
                 <nav id="nav-right">
                     <ul>
                         <li><a href="#">Supporto</a></li>
-                        <li><a href="#">Contatta l'ufficio vendite</a></li>
+                        <li>
+                          <a href="#">Contatta l'ufficio vendite
+                          <span class="tooltiptext">
+                            <ul>
+                              <li>Chat</li>
+                              <li>Email</li>
+                              <li>+390299953412</li>
+                            </ul>
+                          </span>
+                        </a>
+                      </li>
                         <li><a href="#">Accedi</a></li>
                     </ul>
                 </nav>
