--- a/index.html
+++ b/index.html
@@ -363,46 +363,131 @@
     <section id="sponsors">
         <div class="part left">
           <div id="group1">
-            <div class="sponsor logo1">
-              <img class="logo" src="img/designit.svg" alt="">
-            </div>
-            <div class="sponsor logo2">
-              <img class="logo" src="img/arizona_state_university.svg" alt="">
-            </div>
+            <a href="#main-text-logo">
+              <div class="sponsor logo1">
+                  <img class="logo" src="img/designit.svg" alt="">
+              </div>
+            </a>
+            <a href="#text-logo2">
+              <div class="sponsor logo2">
+                <img class="logo" src="img/arizona_state_university.svg" alt="">
+              </div>
+            </a>
           </div>
           <div id="group2">
-            <div class="sponsor logo3">
-              <img class="logo" src="img/university_of_florida.svg" alt="">
-            </div>
-            <div class="sponsor logo4">
-              <img class="logo" src="img/topps.svg" alt="">
-            </div>
+            <a href="#text-logo3">
+              <div class="sponsor logo3">
+                <img class="logo" src="img/university_of_florida.svg" alt="">
+              </div>
+            </a>
+            <a href="#text-logo4">
+              <div class="sponsor logo4">
+                <img class="logo" src="img/topps.svg" alt="">
+              </div>
+            </a>
           </div>
         </div>
         
         
         <div class="part center">
-          <img id="img-center-part" src="img/designit.svg" alt="">
-          <hr class="hr-part-center">
-          <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
-          <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          <div id="main-text-logo">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/designit.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </div>
+
+          <div id="text-logo2">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/arizona_state_university.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </div>
+
+          <span id="text-logo3">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/university_of_florida.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </span>
+
+          <span id="text-logo4">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/topps.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </span>
+
+          <span id="text-logo5">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/world_bicycle_relief.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </span>
+
+          <span id="text-logo6">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/hearst_corp.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </span>
+
+          <span id="text-logo7">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/lonely_planet.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </span>
+
+          <span id="text-logo8">
+            <div class="logo-image-center">
+              <img id="img-center-part" src="img/clear_channel.svg" alt="">
+            </div>
+            <hr class="hr-part-center">
+            <p class="paragraph-center">"I membri del nostro team lavorano costantemente i Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+            <p class="paragraph-center"> Morten Thomsen, Global IT Lead</p>
+          </span>
         </div>
         <div class="part right">
           <div id="group1">
-            <div class="sponsor logo5">
-              <img class="logo" src="img/world_bicycle_relief.svg" alt="">
-            </div>
-            <div class="sponsor logo6">
-              <img class="logo" src="img/hearst_corp.svg" alt="">
-            </div>
+            <a href="#text-logo5">
+              <div class="sponsor logo5">
+                <img class="logo" src="img/world_bicycle_relief.svg" alt="">
+              </div>
+            </a>
+
+            <a href="#text-logo6">
+              <div class="sponsor logo6">
+                <img class="logo" src="img/hearst_corp.svg" alt="">
+              </div>
+            </a>
           </div>
           <div id="group2">
-            <div class="sponsor logo7">
-              <img class="logo" src="img/lonely_planet.svg" alt="">
-            </div>
-            <div class="sponsor logo8">
-              <img class="logo" src="img/clear_channel.svg" alt="">
-            </div>
+            <a href="#text-logo7">
+              <div class="sponsor logo7">
+                <img class="logo" src="img/lonely_planet.svg" alt="">
+              </div>
+            </a>
+
+            <a href="#text-logo8">
+              <div class="sponsor logo8">
+                <img class="logo" src="img/clear_channel.svg" alt="">
+              </div>
+            </a>
           </div>
         </div>
     </section>
